--- a/index.html
+++ b/index.html
@@ -14579,7 +14579,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?</p>
+<p><center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?</center>&lt;/b&gt;</p>
 
 </div>
 </div>
@@ -15154,7 +15154,7 @@ successfully initialized (spaCy Version: 3.3.0, language model: nl_core_news_sm)
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Before we can plot them on a map, we need to add coordinates to the placenames. We'll use the Google Maps API for that. Notice that you will need your own key to do so. You can register for a free API key at Google.</p>
+<p>Before we can plot them on a map, we need to add coordinates to the placenames. We'll use the Google Maps API for that. Notice that you will need your own key to do so. You can register for a free API key at Google. <em>(It seems impossible to hide the API call output, so just ignore that and scroll down.)</em></p>
 
 </div>
 </div>
@@ -15631,7 +15631,7 @@ Warning message:
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <hr>
-<p><center><b><h3>  And here we have our results:</p>
+<p><center><b><h3>  And here we have our results:</center>&lt;/h3&gt;</p>
 
 </div>
 </div>
