--- a/index.html
+++ b/index.html
@@ -14579,8 +14579,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?</center>&lt;/b&gt;</p>
-
+<center><b><h2>  Where were revolutions located between 1840 and 1860, based on articles titles from Dutch newspapers?</b></center>
 </div>
 </div>
 </div>
@@ -15631,8 +15630,7 @@ Warning message:
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <hr>
-<p><center><b><h3>  And here we have our results:</center>&lt;/h3&gt;</p>
-
+<center><b><h3>  And here we have our results:</b></center>
 </div>
 </div>
 </div>
