--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>delpher_august2022.knit</title>
+<title>Plotting historical revolutions</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -361,6 +361,7 @@ pre code {
 
 
 
+<h1 class="title toc-ignore">Plotting historical revolutions</h1>
 
 </div>
 
